# CPiDrone

./: README.md
CPiDroneMicroController/blink/: CMakeLists.txt
FlightController/: CMakeLists.txt  FlightController.cpp
FlightController/include/: DroneModel.h  MPU6050.h
FlightController/src/: DroneModel.cpp  FlightController.cpp  MPU6050.cpp
PiDrone/: .gitignore  CMakeLists.txt
PiDrone/include/: Constants.h  DRV8833.h  MPU6050.h  PCA9685.h  PiDrone.h  TCPServer.h
PiDrone/src/: DRV8833.cpp  I2CPeripheral.cpp  PCA9685.cpp  PiDrone.cpp  TCPServer.cpp  main.cpp
